--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/style.css">
+
     <title>Marvel Cinematic Universe</title>
 </head>
+
 <body>
-    
+    <header>Marvel Cinematic Universe</header>
+
+    <section>
+
+
+    </section>
+    <script src="./Assets/script.js"></script>
 </body>
 </html>
