--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
 
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./Assets/script.js"></script>
 </body>
+
 </html>
