--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
   <link rel="stylesheet" href="./Assets/style.css">
   <title>Find Informations about your Movie</title>
 </head>
-<header></header>
+
+<header>
+Welcome to the Movies list 
+<img src=""/>
+</header>
+<div>
+    <h1> About our App</h1>
+    <p> mmmmmmmmm</p>
+</div>
+
 
 <body>
+    <input id="movieName"></input>
+    <button id="searchMovie"></button>
+    <div id="result"></div>
+
+    <footer>
+        <div>About Us</div>
+        <div> Contact Us</div>
+        <div> Feedback</div>
+    </footer>
+    <script src='./Assets/script.js'></script> 
 </body>
 </html>
