--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 
 
-<header class="md:container bg-gradient-to-r from-green-400 to-blue-500 my-4 mx-auto">Welcome to the Movies List</header>
+<header class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">Welcome to the Movies List</header>
 <div>
     <h1 class="md:container mx-8 my-8 "> About our App</h1>
     <p class="md:container mx-8 my-8"> mmmmmmmmm</p>
