linked html pages

--- a/landing_page.html
+++ b/landing_page.html
@@ -7,7 +7,7 @@
 </html>
 
 
-<img src="https://media4.giphy.com/media/CcKZTKpsoIk1MeGRhU/giphy.gif" class="center"> 
+<img src="./images/giphy.gif" class="center"> 
     <style>
         .container {
           height: 200px;
@@ -25,5 +25,5 @@
         }
         </style>
         <div style="text-align:center">
-          <a href="somepage.html"><button type="button">ScaryMovies</button></a>
+          <a href="./index.html"><button type="button">ScaryMovies</button></a>
         </div>
