--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <button id="searchMovie"></button>
     <div id="result"></div>
     
- <footer class="md:container bg-gradient-to-r from-green-400 to-blue-500 my-4 mx-auto">
+ <footer class="md:container bg-gradient-to-r from-green-400 to-blue-500 my-4 mx-auto text-bold text-1xl">
         <div>About Us</div>
         <div> Contact Us</div>
         <div> Feedback</div>
