--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName" placeholder="search movie title"></input>
     <button id="searchMovie">search</button>
-    <div id="result"></div>
+    <div id="result" class="empty"></div>
     
  <footer class="md:container bg-gradient-to-r from-green-400 to-blue-500 my-4 mx-auto">
         <div>About Us</div>
