--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
 
 
 <header class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">Welcome to the Movies List</header>
-<div>
+<div class="mx-10 my-4">
     <h1 class="md:container mx-8 my-8 "> About our App</h1>
-    <p class="md:container mx-8 my-8"> mmmmmmmmm</p>
+    <p class="md:container mx-8 my-8">Lorem ipsum dolor sit amet <a class="text-red-700 hover:text-purple-400" href=""> consectetur adipisicing elit.</a> Impedit corrupti tempore voluptatem? Fugit in unde tempora laborum? Totam, assumenda ducimus.</p>
 </div>
 
+    
 
 
+<div class="mx-10 my-4">
     <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName"></input>
     <button id="searchMovie"></button>
-    <div id="result"></div>
+    <div class="sm:container my-4" id="result"></div>
+</div>
     
  <footer class="md:container bg-gradient-to-r from-green-400 to-blue-500 my-4 mx-auto text-bold text-1xl">
         <div>About Us</div>
