--- a/landing_page.html
+++ b/landing_page.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
 <h1 style="text-align: center;">Like movies and GIFs?</h1>
-<p style="text-align: center;">Find and search for your favorit movies and find GIFs that correspond with them.</p1>
+<p style="text-align: center;">Find and search for your favorite movies and find GIFs that correspond with them.</p1>
 </body>
 </html>
 
