--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="Description" content="Enter your description here" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f682582b79.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./Assets/style.css">
   <title>Find Information About Your Movie</title>
 </head>
@@ -31,6 +32,14 @@
         <div>About Us</div>
         <div> Contact Us</div>
         <div> Feedback</div>
+
+        <p class="icons">
+              <a href="https://www.instagram.com/rottentomatoes/" i class="fab fa-instagram" ><span>Rotten Tomatoes Instagram</span></a></i>
+              <br>
+              <a href="https://www.rottentomatoes.com/" i class= "fab fa-tomato"><span>Rotten Tomatoes Movie Reviews</span></a></i>
+              <br>
+              <a href="https://github.com/hayvant/giphymeetsmovies" i class="fab fa-github"><span>Github</span></a>
+      </p>
  </footer>
 
  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
