--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <div class="mx-10 my-4">
-    <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName"></input>
+    <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName" placeholder="search movie title"></input>
     <button id="searchMovie"></button>
     <div class="sm:container my-4" id="result"></div>
 </div>
