--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <header class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">Welcome to the Movies List</header>
 <div>
-    <h1 class="md:container mx-8 my-8 "> About our App</h1>
-    <p class="md:container mx-8 my-8"> mmmmmmmmm</p>
+    <h1 class="md:container mx-8 my-8 "> Movies to watch anywhere you go for free.</h1>
+    <p class="md:container mx-8 my-8"> This App will allow you to to watch your favorite movies for free.It is easy to find and enjoy the entertainment movie you love in your place.</p>
 </div>
 
 
