--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta http-equiv="X-UA-Compatible" content="ie=edge">
        <meta name="Description" content="Enter your description here" />
-       <link rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+       <link rel="shortcut icon" type="img/jpg" href="./images/bobines-video-icon.png"/>
        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
        <script src="https://kit.fontawesome.com/f682582b79.js" crossorigin="anonymous"></script>
        <link rel="stylesheet" href="./Assets/style.css">
@@ -21,7 +21,12 @@
        </header>
 
        <nav>
+              <ul class="links">
               <a href="./landing_page.html"><button type="button">Home Page</button></a>
+              <a href="aboutus">About Us</a>
+              <a href="contactus"> Contact Us</a>
+              <a href=" feedback"> Feedback</a>
+              </ul>
        </nav>
 
        <div>
@@ -34,9 +39,6 @@
        <div id="result" class="empty"></div>
 
        <footer class="md:container bg-gradient-to-r from-green-400 to-blue-500 my-4 mx-auto">
-              <a href="aboutus">About Us</a>
-              <a href="contactus"> Contact Us</a>
-              <a href=" feedback"> Feedback</a>
 
               <p class="icons">
                      <a href="https://www.instagram.com/rottentomatoes/" i class="fab fa-instagram"><span>Rotten
