--- a/index.html
+++ b/index.html
@@ -9,46 +9,65 @@
        <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
        <link rel="stylesheet" href="./Assets/style.css">
        <title>Find Information About Your Movie</title>
 </head>
 
 <body class="bg-gray-300">
 
-       <header class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">
+       <header
+              class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">
               Welcome to the Movies List
        </header>
 
-       <nav>
-              <ul class="links">
-              <a href="./landing_page.html"><button type="button">Home Page</button></a>
-              <a href="aboutus">About Us</a>
-              <a href="contactus"> Contact Us</a>
-              <a href=" feedback"> Feedback</a>
-              </ul>
-       </nav>
-
-
-       <header
-              class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">
-              Welcome to the Movies List</header>
        <div>
               <h1 class="md:container mx-8 my-8 "> About our App</h1>
-              <p class="md:container mx-8 my-8"> mmmmmmmmm</p>
+              <p class="md:container mx-8 my-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odio doloribus, temporibus veniam ratione nesciunt optio quas quidem!</p>
        </div>
 
        <nav class="navbar navbar-light bg-light justify-content-between">
               <form class="form-inline">
-                     <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName" placeholder="Search Movie Title"></input>
-                     <button class="btn btn-outline-success" type="button" id="searchMovie" type="submit">Search</button>
+                     <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName"
+                            placeholder="Search Movie Title"></input>
+                     <button class="btn btn-outline-success" type="button" id="searchMovie"
+                            type="submit">Search</button>
               </form>
        </nav>
 
-       <div id="result" class="empty"></div>
+       <section class="md:h-full flex items-center text-gray-600">
 
-       <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName" placeholder="search movie title"></input>
-       <button id="searchMovie">search</button>
-       <div id="result" class="empty"></div>
+              <div class="container px-5 py-24 mx-auto">
+
+
+
+                     <div class="flex flex-wrap -m-4">
+
+                            <div class="p-4 mx-auto lg:w-3/4">
+                                   <div
+                                          class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+                                          <img src="https://picsum.photos/id/188/720/400" alt="image"
+                                                 class="lg:h-72 md:h-48 w-full object-cover object-center">
+                                          <div
+                                                 class="p-6 hover:bg-blue-500 hover:text-white transition duration-300 ease-in">
+                                                 <h2 class="text-base font-medium text-indigo-300 mb-1">October 25, 2021
+                                                 </h2>
+                                                 <h1 class="text-2xl font-semibold mb-3">Movie/Gif text here</h1>
+                                                 <p class="leading-relaxed mb-3">Lorem ipsum dolor sit amet consectetur,
+                                                        adipisicing elit. Eveniet, dolores?</p>
+                                                 <div class="flex items-center flex-wrap">
+
+                                                 </div>
+                                          </div>
+
+                                   </div>
+                            </div>
+
+                     </div>
+
+              </div>
+
+       </section>
 
        <footer>
               <div class="p-10 bg-gradient-to-r from-green-400 to-blue-500 text-gray-800">
@@ -56,7 +75,7 @@
                             <div class="grid grid-row-1 md:grid-cols-2 md:grid-cols-4 gap-2 text-sm">
                                    <div class="mb-5">
                                           <h4 class="text-2xl pb-2">Company</h4>
-                                          <p class="text-gray-600">
+                                          <p class="text-gray-800">
                                                  address goes here <br>
                                                  1234, street ave <br>
                                                  yada yada WA 12345 <br><br>
@@ -66,30 +85,43 @@
                                    </div>
                                    <div class="mb-5">
                                           <h4 class="text 1xl pb-2">Links:</h4>
-                                          <ul class="text-gray-500">
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Home</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">About Us</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Services</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Terms of Service</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Privacy Policy</a></li>
+                                          <ul class="text-gray-800">
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Home</a>
+                                                 </li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">About Us</a>
+                                                 </li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Services</a>
+                                                 </li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Terms of
+                                                               Service</a></li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Privacy
+                                                               Policy</a></li>
                                           </ul>
                                    </div>
                                    <div class="mb-5">
                                           <h4 class="text 1xl pb-2">Our Services:</h4>
-                                          <ul class="text-gray-500">
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Web Design</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Web development</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Product Management</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Marketing</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Graphic Design</a></li>
+                                          <ul class="text-gray-800">
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Web
+                                                               Design</a></li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Web
+                                                               development</a></li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Product
+                                                               Management</a></li>
+                                                 <li class="pb-2"><a href="#"
+                                                               class="hover:text-yellow-500">Marketing</a></li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Graphic
+                                                               Design</a></li>
                                           </ul>
                                    </div>
                                    <div class="mb-5">
                                           <h4 class="pb-2">Join Our Newsletter:</h4>
                                           <p class="text-gray-600 pb-2">Lorem ipsum dolor sit amet, consectetur</p>
                                           <form class="flex flex-row flex-wrap">
-                                                 <input type="text" class="text-gray-600 w-2/3 p-2 focus:border-yellow-500" placeholder="email@example.com">
-                                                 <button class="p-2 w-1/3 bg-yellow-500 text-white hover:bg-yellow-600">Subscribe</button>
+                                                 <input type="text"
+                                                        class="text-gray-600 w-2/3 p-2 focus:border-yellow-500"
+                                                        placeholder="email@example.com">
+                                                 <button
+                                                        class="p-2 w-1/3 bg-yellow-500 text-white hover:bg-yellow-600">Subscribe</button>
                                           </form>
                                    </div>
                             </div>
@@ -99,19 +131,29 @@
                      <div class="max-w-7xl flex flex-col sm:flex-row py-4 mx-auto justify-between items-center">
                             <div class="text-center">
                                    <div>
-                                       Copyright <strong><span>Company</span></strong>. All Rights Reserved   
+                                          Copyright <strong><span>Company</span></strong>. All Rights Reserved
                                    </div>
                                    <div>
-                                         Designed with <a href="#" class="text-yellow-500">TailwindCss</a>        
+                                          Designed with <a href="#" class="text-yellow-500">TailwindCss</a>
                                    </div>
                             </div>
                             <div class="text-center text-xl text-white mb-2">
-                               <a href="#" class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i class="fa fa-twitter"></i></a>
-                               <a href="#" class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i class="fa fa-instagram"></i></a>
-                               <a href="#" class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i class="fa fa-facebook"></i></a>
-                               <a href="#" class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i class="fa fa-skype"></i></a>
-                               <a href="#" class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i class="fa fa-linkedin"></i></a>
-                                  
+                                   <a href="https://twitter.com/?lang=en"
+                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i 
+                                                 class="fa fa-twitter"></i></a>
+                                   <a href="https://www.instagram.com/"
+                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                                 class="fa fa-instagram"></i></a>
+                                   <a href="https://www.facebook.com/"
+                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                                 class="fa fa-facebook"></i></a>
+                                   <a href="https://www.skype.com/en/"
+                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                                 class="fa fa-skype"></i></a>
+                                   <a href="https://www.linkedin.com/home"
+                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                                 class="fa fa-linkedin"></i></a>
+
                             </div>
                      </div>
               </div>
