--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body class="bg-gray-300">
 
        <header
-              class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">
+              class="md:container bg-clip-text font-extrabold bg-gradient-to-b from-green-400 to-blue-500 text-5xl text-transparent text-center">
               Welcome to the Movies List
        </header>
 
-       <div>
-              <h1 class="md:container mx-8 my-8 "> About our App</h1>
-              <p class="md:container mx-8 my-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odio doloribus, temporibus veniam ratione nesciunt optio quas quidem!</p>
+       <div class="bg-gradient-to-t from-green-400 to-blue-500">
+              <h1 class="md:container mx-8 my-8 text-center text-2xl"> About our App</h1>
+              <p class="md:container mx-8 my-8 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odio doloribus, temporibus veniam ratione nesciunt optio quas quidem!</p>
        </div>
 
        <nav class="navbar navbar-light bg-light justify-content-between">
@@ -43,17 +43,14 @@
 
                      <div class="flex flex-wrap -m-4">
 
-                            <div class="p-4 mx-auto lg:w-3/4">
+                            <div class="p-4 mx-auto lg:w-1/2">
                                    <div
                                           class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-                                          <img src="https://picsum.photos/id/188/720/400" alt="image"
+                                          <img src="images/1621476110_100209_gif-url.gif" alt="image"
                                                  class="lg:h-72 md:h-48 w-full object-cover object-center">
-                                          <div
-                                                 class="p-6 hover:bg-blue-500 hover:text-white transition duration-300 ease-in">
-                                                 <h2 class="text-base font-medium text-indigo-300 mb-1">October 25, 2021
-                                                 </h2>
-                                                 <h1 class="text-2xl font-semibold mb-3">Movie/Gif text here</h1>
-                                                 <p class="leading-relaxed mb-3">Lorem ipsum dolor sit amet consectetur,
+                                          <div class="p-6 hover:bg-blue-400 hover:text-white transition duration-300 ease-in">
+                                                 <h1 class="text-2xl text-center font-semibold mb-3">Movie/Gif text here</h1>
+                                                 <p class="leading-relaxed text-center mb-3">Lorem ipsum dolor sit amet consectetur,
                                                         adipisicing elit. Eveniet, dolores?</p>
                                                  <div class="flex items-center flex-wrap">
 
@@ -84,44 +81,36 @@
                                           </p>
                                    </div>
                                    <div class="mb-5">
-                                          <h4 class="text 1xl pb-2">Links:</h4>
+                                          <h4 class="text-2xl pb-2">Links:</h4>
                                           <ul class="text-gray-800">
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Home</a>
+                                                 <li class="pb-2"><a href="#" class="hover:text-white">Home</a>
                                                  </li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">About Us</a>
+                                                 <li class="pb-2"><a href="#" class="hover:text-white">About Us</a>
                                                  </li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Services</a>
+                                                 <li class="pb-2"><a href="#" class="hover:text-white">Services</a>
                                                  </li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Terms of
-                                                               Service</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Privacy
-                                                               Policy</a></li>
                                           </ul>
                                    </div>
                                    <div class="mb-5">
-                                          <h4 class="text 1xl pb-2">Our Services:</h4>
+                                          <h4 class="text-2xl pb-2">Our Services:</h4>
                                           <ul class="text-gray-800">
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Web
+                                                 <li class="pb-2"><a href="#" class="hover:text-white">Web
                                                                Design</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Web
+                                                 <li class="pb-2"><a href="#" class="hover:text-white">Web
                                                                development</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Product
-                                                               Management</a></li>
                                                  <li class="pb-2"><a href="#"
-                                                               class="hover:text-yellow-500">Marketing</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-yellow-500">Graphic
-                                                               Design</a></li>
+                                                               class="hover:text-white">Marketing</a></li>
                                           </ul>
                                    </div>
                                    <div class="mb-5">
-                                          <h4 class="pb-2">Join Our Newsletter:</h4>
+                                          <h4 class="text-2xl pb-2">Join Our Newsletter:</h4>
                                           <p class="text-gray-600 pb-2">Lorem ipsum dolor sit amet, consectetur</p>
                                           <form class="flex flex-row flex-wrap">
                                                  <input type="text"
                                                         class="text-gray-600 w-2/3 p-2 focus:border-yellow-500"
                                                         placeholder="email@example.com">
                                                  <button
-                                                        class="p-2 w-1/3 bg-yellow-500 text-white hover:bg-yellow-600">Subscribe</button>
+                                                        class="p-2 w-1/3 bg-green-400 text-black hover:bg-blue-500">Subscribe</button>
                                           </form>
                                    </div>
                             </div>
@@ -134,24 +123,24 @@
                                           Copyright <strong><span>Company</span></strong>. All Rights Reserved
                                    </div>
                                    <div>
-                                          Designed with <a href="#" class="text-yellow-500">TailwindCss</a>
+                                          Designed with <a href="#" class="text-green-400">TailwindCss</a>
                                    </div>
                             </div>
                             <div class="text-center text-xl text-white mb-2">
                                    <a href="https://twitter.com/?lang=en"
-                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i 
+                                          class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i 
                                                  class="fa fa-twitter"></i></a>
                                    <a href="https://www.instagram.com/"
-                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                          class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i
                                                  class="fa fa-instagram"></i></a>
                                    <a href="https://www.facebook.com/"
-                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                          class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i
                                                  class="fa fa-facebook"></i></a>
                                    <a href="https://www.skype.com/en/"
-                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                          class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i
                                                  class="fa fa-skype"></i></a>
                                    <a href="https://www.linkedin.com/home"
-                                          class="w-10 h-10 rounded-full bg-yellow-500 hover:bg-yellow-600 mx-1 inline-block pt-1"><i
+                                          class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i
                                                  class="fa fa-linkedin"></i></a>
 
                             </div>
