linked IDs from js to html pages

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
        <meta name="Description" content="Enter your description here" />
        <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-<<<<<<< HEAD
-       <link rel="shortcut icon" type="img/jpg" href="./images/bobines-video-icon.png" />
-=======
->>>>>>> main
        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
        <link rel="stylesheet" href="./Assets/style.css">
@@ -21,31 +17,14 @@
 <body class="bg-gray-300">
 
        <header
-<<<<<<< HEAD
-              class="md:container bg-gradient-to-r font-bold from-green-400 text-4xl text-center to-blue-500 my-4 mx-auto">
-              Welcome to the Movies List
-       </header>
-
-       <nav>
-              <ul class="links">
-                     <a href="./landing_page.html"><button type="button">Home Page</button></a>
-                     <a href="aboutus">About Us</a>
-                     <a href="contactus"> Contact Us</a>
-                     <a href=" feedback"> Feedback</a>
-              </ul>
-       </nav>
-
-       <div>
-              <h1 class="md:container mx-8 my-8 "> About our App</h1>
-=======
               class="md:container bg-clip-text font-extrabold bg-gradient-to-b from-green-400 to-blue-500 text-5xl text-transparent text-center">
               Welcome to the Movies List
        </header>
 
        <div class="bg-gradient-to-t from-green-400 to-blue-500">
               <h1 class="md:container mx-8 my-8 text-center text-2xl"> About our App</h1>
-              <p class="md:container mx-8 my-8 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit odio doloribus, temporibus veniam ratione nesciunt optio quas quidem!</p>
->>>>>>> main
+              <p class="md:container mx-8 my-8 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Suscipit odio doloribus, temporibus veniam ratione nesciunt optio quas quidem!</p>
        </div>
 
        <nav class="navbar navbar-light bg-light justify-content-between">
@@ -57,14 +36,6 @@
               </form>
        </nav>
 
-<<<<<<< HEAD
-       <div id="movieTitle" class="empty"></div>
-       <div id="movieYear" class="empty"></div>
-       <div id="moviePeople" class="empty"></div>
-       <img id="movieGif" class="empty">
-       <div id="movieStorage" class="empty"></div>
-
-=======
        <section class="md:h-full flex items-center text-gray-600">
 
               <div class="container px-5 py-24 mx-auto">
@@ -77,11 +48,14 @@
                                    <div
                                           class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
                                           <img src="images/1621476110_100209_gif-url.gif" alt="image"
-                                                 class="lg:h-72 md:h-48 w-full object-cover object-center">
-                                          <div class="p-6 hover:bg-blue-400 hover:text-white transition duration-300 ease-in">
-                                                 <h1 class="text-2xl text-center font-semibold mb-3">Movie/Gif text here</h1>
-                                                 <p class="leading-relaxed text-center mb-3">Lorem ipsum dolor sit amet consectetur,
-                                                        adipisicing elit. Eveniet, dolores?</p>
+                                                 class="lg:h-72 md:h-48 w-full object-cover object-center"
+                                                 id="movieGif">
+                                          <div
+                                                 class="p-6 hover:bg-blue-400 hover:text-white transition duration-300 ease-in">
+                                                 <h1 class="text-2xl text-center font-semibold mb-3" id="movieTitle">
+                                                 </h1>
+                                                 <p class="leading-relaxed text-center mb-3" id="movieYear"></p>
+                                                 <p class="leading-relaxed text-center mb-3" id="moviePeople"></p>
                                                  <div class="flex items-center flex-wrap">
 
                                                  </div>
@@ -95,7 +69,6 @@
               </div>
 
        </section>
->>>>>>> main
 
        <footer>
               <div class="p-10 bg-gradient-to-r from-green-400 to-blue-500 text-gray-800">
@@ -129,8 +102,8 @@
                                                                Design</a></li>
                                                  <li class="pb-2"><a href="#" class="hover:text-white">Web
                                                                development</a></li>
-                                                 <li class="pb-2"><a href="#"
-                                                               class="hover:text-white">Marketing</a></li>
+                                                 <li class="pb-2"><a href="#" class="hover:text-white">Marketing</a>
+                                                 </li>
                                           </ul>
                                    </div>
                                    <div class="mb-5">
@@ -159,7 +132,7 @@
                             </div>
                             <div class="text-center text-xl text-white mb-2">
                                    <a href="https://twitter.com/?lang=en"
-                                          class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i 
+                                          class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i
                                                  class="fa fa-twitter"></i></a>
                                    <a href="https://www.instagram.com/"
                                           class="w-10 h-10 rounded-full bg-green-400 hover:bg-white mx-1 inline-block pt-1"><i
