landing page with background image

--- a/landing_page.html
+++ b/landing_page.html
@@ -1,8 +1,9 @@
 <html>
 <head></head>
 <body>
-<h1 style="text-align: center;">Like movies and GIFs?</h1>
-<p style="text-align: center;">Find and search for your favorite movies and find GIFs that correspond with them.</p1>
+<h1 style="text-align: center;">Find the intersection of Movies and Giphys!</h1>
+<p style="text-align: center;">Find GIFs from all over the Internet that ties in with your favorite movies to share</p1>
+<p style="text-align: center;">Look up details about your favorite movies and award winning films</p>
 </body>
 </html>
 
@@ -14,7 +15,11 @@
           position: relative;
           border: 3px;
         }
-        
+        img {
+                width: 50%;
+                height: 50%;
+                object-fit: contain;
+        }
         .center {
           margin: 0;
           position: absolute;
@@ -25,5 +30,5 @@
         }
         </style>
         <div style="text-align:center">
-          <a href="./index.html"><button type="button">ScaryMovies</button></a>
+          <a href="./index.html"><button type="button">MovieMeetsGiphy</button></a>
         </div>
