added Github links

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                      <div class="max-w-7xl mx-2">
                             <div class="grid grid-row-1 md:grid-cols-2 md:grid-cols-4 gap-2 text-sm">
                                    <div class="mb-5">
-                                          <h4 class="text-2xl pb-2">Company</h4>
+                                          <h4 class="text-2xl pb-2">Contributers:</h4>
                                           <p class="text-gray-800">
-                                                 address goes here <br>
-                                                 1234, street ave <br>
-                                                 yada yada WA 12345 <br><br>
-                                                 <strong>Phone:</strong>+1 234 567 8912<br>
-                                                 <strong>Email:</strong>info@exapmle.com<br>
+                                                 Fatima Baloch<br>
+                                                 Hailey Van Tussenbroek<br>
+                                                 James Lee<br>
+                                                 Oscar Plumridge<br>
+                                                 Troy Wiegel<br>
                                           </p>
                                    </div>
                                    <div class="mb-5">
@@ -98,19 +98,18 @@
                                           </ul>
                                    </div>
                                    <div class="mb-5">
-                                          <h4 class="text-2xl pb-2">Our Services:</h4>
+                                          <h4 class="text-2xl pb-2">Github Pages:</h4>
                                           <ul class="text-gray-800">
-                                                 <li class="pb-2"><a href="#" class="hover:text-white">Web
-                                                               Design</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-white">Web
-                                                               development</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-white">Marketing</a>
-                                                 </li>
+                                                 <li class="pb-2"><a href="https://github.com/FatimaFBZ" class="hover:text-white">Fatima</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/hayvant" class="hover:text-white">Hailey</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/leejam06" class="hover:text-white">James</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/OscarP76" class="hover:text-white">Oscar</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/troywiegel" class="hover:text-white">Troy</a></li>
                                           </ul>
                                    </div>
                                    <div class="mb-5">
                                           <h4 class="text-2xl pb-2">Join Our Newsletter:</h4>
-                                          <p class="text-gray-600 pb-2">Lorem ipsum dolor sit amet, consectetur</p>
+                                          <p class="text-gray-600 pb-2"></p>
                                           <form class="flex flex-row flex-wrap">
                                                  <input type="text"
                                                         class="text-gray-600 w-2/3 p-2 focus:border-yellow-500"
