--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,10 @@
 
        <div class="bg-gradient-to-t from-green-400 to-blue-500">
               <h1 class="md:container mx-8 my-8 text-center text-2xl"> About our App</h1>
-              <p class="md:container mx-8 my-8 text-center">Welcome all movie buffs! Do you have a passionate interest in cinema and giphys? You’ve come to the right place! Search your favorite movies and our application database will obtain movie information and generate a short looping of the movie- a giphy to match it! Enjoy!</p>
+              <p class="md:container mx-8 my-8 text-center">Welcome all movie buffs! Do you have a passionate interest
+                     in cinema and giphys? You’ve come to the right place! Search your favorite movies and our
+                     application database will obtain movie information and generate a short looping of the movie- a
+                     giphy to match it! Enjoy!</p>
 
        </div>
 
@@ -30,18 +34,18 @@
               <form class="form-inline">
                      <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName"
                             placeholder="Search Movie Title"></input>
-              <button class="btn btn-outline-success" type="button" id="searchMovie"
+                     <button class="btn btn-outline-success" type="button" id="searchMovie"
                             type="submit">Search</button>
-       </form>
-</nav>
+              </form>
+       </nav>
 
-<section class="md:h-full flex items-center text-gray-600">
+       <section class="md:h-full flex items-center text-gray-600">
 
-       <div class="container px-5 py-24 mx-auto">
+              <div class="container px-5 py-24 mx-auto">
 
 
 
-              <div class="flex flex-wrap -m-4">
+                     <div class="flex flex-wrap -m-4">
 
                             <div class="p-8 mx-auto lg:w-screen lg:h-screen">
                                    <div
@@ -63,14 +67,14 @@
                                    </div>
                             </div>
 
-                            </div>
                      </div>
+              </div>
 
               </div>
 
-       </div>
+              </div>
 
-</section>
+       </section>
 
        <footer>
               <div class="p-10 bg-gradient-to-r from-green-400 to-blue-500 text-gray-800">
@@ -89,7 +93,8 @@
                                    <div class="mb-5">
                                           <h4 class="text-2xl pb-2">Links:</h4>
                                           <ul class="text-gray-800">
-                                                 <li class="pb-2"><a href="./landing_page.html" class="hover:text-white">Home</a>
+                                                 <li class="pb-2"><a href="./landing_page.html"
+                                                               class="hover:text-white">Home</a>
                                                  </li>
                                                  <li class="pb-2"><a href="#" class="hover:text-white">About Us</a>
                                                  </li>
