--- a/landingpage.html
+++ b/landingpage.html
@@ -40,5 +40,5 @@
     </style>
         </style>
         <div style="text-align:center">
-          <a href="./index.html"><button type="button">MovieMeetsGiphy</button></a>
+          <a href="./Assets/index.html"><button type="button">MovieMeetsGiphy</button></a>
         </div>
