--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
     </style>
         </style>
         <div style="text-align:center">
-          <a href="./Assets/index.html"><button type="button">MovieMeetsGiphy</button></a>
+          <a href="./search.html"><button type="button">MovieMeetsGiphy</button></a>
         </div>
