--- a/search.html
+++ b/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
               href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+       <link rel="stylesheet" href="./Assets/style.css">
        <title>Find Information About Your Movie</title>
 </head>
 
@@ -21,25 +23,29 @@
 
        <div class="bg-gradient-to-t from-green-400 to-blue-500">
               <h1 class="md:container mx-8 my-8 text-center text-2xl"> About our App</h1>
-              <p class="md:container mx-8 my-8 text-center">Welcome all movie buffs! Do you have a passionate interest in cinema and giphys? You’ve come to the right place! Search your favorite movies and our application database will obtain movie information and generate a short looping of the movie- a giphy to match it! Enjoy!</p>
+              <p class="md:container mx-8 my-8 text-center">Welcome all movie buffs! Do you have a passionate interest
+                     in cinema and giphys? You've come to the right place! Search your favorite movies and our
+                     application database will obtain movie information and generate a short looping of the movie- a
+                     giphy to match it! Enjoy!</p>
+
        </div>
 
        <nav class="navbar navbar-light bg-light justify-content-center">
               <form class="form-inline">
                      <input class="bg-gray-200 focus:bg-white mx-4 my-4" id="movieName"
                             placeholder="Search Movie Title"></input>
-              <button class="btn btn-outline-success" type="button" id="searchMovie"
+                     <button class="btn btn-outline-success" type="button" id="searchMovie"
                             type="submit">Search</button>
-       </form>
-</nav>
+              </form>
+       </nav>
 
-<section class="md:h-full flex items-center text-gray-600">
+       <section class="md:h-full flex items-center text-gray-600">
 
-       <div class="container px-5 py-24 mx-auto">
+              <div class="container px-5 py-24 mx-auto">
 
 
 
-              <div class="flex flex-wrap -m-4">
+                     <div class="flex flex-wrap -m-4">
 
                             <div class="p-8 mx-auto lg:w-screen lg:h-screen">
                                    <div
@@ -61,33 +67,34 @@
                                    </div>
                             </div>
 
-                            </div>
                      </div>
+              </div>
 
               </div>
 
-       </div>
+              </div>
 
-</section>
+       </section>
 
        <footer>
               <div class="p-10 bg-gradient-to-r from-green-400 to-blue-500 text-gray-800">
                      <div class="max-w-7xl mx-2">
                             <div class="grid grid-row-1 md:grid-cols-2 md:grid-cols-4 gap-2 text-sm">
                                    <div class="mb-5">
-                                          <h4 class="text-2xl pb-2">Company</h4>
+                                          <h4 class="text-2xl pb-2">Contributers:</h4>
                                           <p class="text-gray-800">
-                                                 address goes here <br>
-                                                 1234, street ave <br>
-                                                 yada yada WA 12345 <br><br>
-                                                 <strong>Phone:</strong>+1 234 567 8912<br>
-                                                 <strong>Email:</strong>info@exapmle.com<br>
+                                                 Fatima Baloch<br>
+                                                 Hailey Van Tussenbroek<br>
+                                                 James Lee<br>
+                                                 Oscar Plumridge<br>
+                                                 Troy Wiegel<br>
                                           </p>
                                    </div>
                                    <div class="mb-5">
                                           <h4 class="text-2xl pb-2">Links:</h4>
                                           <ul class="text-gray-800">
-                                                 <li class="pb-2"><a href="./landing_page.html" class="hover:text-white">Home</a>
+                                                 <li class="pb-2"><a href="./index.html"
+                                                               class="hover:text-white">Home</a>
                                                  </li>
                                                  <li class="pb-2"><a href="#" class="hover:text-white">About Us</a>
                                                  </li>
@@ -96,19 +103,23 @@
                                           </ul>
                                    </div>
                                    <div class="mb-5">
-                                          <h4 class="text-2xl pb-2">Our Services:</h4>
+                                          <h4 class="text-2xl pb-2">Github Pages:</h4>
                                           <ul class="text-gray-800">
-                                                 <li class="pb-2"><a href="#" class="hover:text-white">Web
-                                                               Design</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-white">Web
-                                                               development</a></li>
-                                                 <li class="pb-2"><a href="#" class="hover:text-white">Marketing</a>
-                                                 </li>
+                                                 <li class="pb-2"><a href="https://github.com/FatimaFBZ"
+                                                               class="hover:text-white">Fatima</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/hayvant"
+                                                               class="hover:text-white">Hailey</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/leejam06"
+                                                               class="hover:text-white">James</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/OscarP76"
+                                                               class="hover:text-white">Oscar</a></li>
+                                                 <li class="pb-2"><a href="https://github.com/troywiegel"
+                                                               class="hover:text-white">Troy</a></li>
                                           </ul>
                                    </div>
                                    <div class="mb-5">
                                           <h4 class="text-2xl pb-2">Join Our Newsletter:</h4>
-                                          <p class="text-gray-600 pb-2">Lorem ipsum dolor sit amet, consectetur</p>
+                                          <p class="text-gray-600 pb-2"></p>
                                           <form class="flex flex-row flex-wrap">
                                                  <input type="text"
                                                         class="text-gray-600 w-2/3 p-2 focus:border-yellow-500"
@@ -156,5 +167,4 @@
               integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
        <script src="./Assets/script.js"></script>
 </body>
-
 </html>
