added local storage loop

--- a/search.html
+++ b/search.html
@@ -59,10 +59,11 @@
                                                  </h1>
                                                  <p class="leading-relaxed text-center mb-3" id="movieYear"></p>
                                                  <p class="leading-relaxed text-center mb-3" id="moviePeople"></p>
-                                                 <div class="flex items-center flex-wrap">
-
-                                                 </div>
+                                                 
                                           </div>
+
+                                   </div>
+                                   <div id="movieStorage"class="flex items-center flex-wrap empty">
 
                                    </div>
                             </div>
