--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+<head></head>
+<body>
+<h1 style="color:yellow;text-align: center">Find the intersection of Movies and Giphys!</h1>
+<p style="color:yellow;text-align: center;">Find GIFs from all over the Internet that ties in with your favorite movies to share</p1>
+<p style="color:yellow;text-align: center;">Look up details about your favorite movies and award winning films</p>
 </body>
 </html>
 
@@ -34,5 +40,5 @@
     </style>
         </style>
         <div style="text-align:center">
-          <a href="./Assets/index.html"><button type="button">MovieMeetsGiphy</button></a>
+          <a href="./search.html"><button type="button">MovieMeetsGiphy</button></a>
         </div>
