search page edited- resized and added refresh button. readme pitch edited

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-<head></head>
+<head>
+<link rel="icon" type="image/x-icon" href="./images/bobines-video-icon.png">
+<title>Movie meets Giphy!</title>
+</head>
 <body>
 <h1 style="color:yellow;text-align: center">Find the intersection of Movies and Giphys!</h1>
 <p style="color:yellow;text-align: center;">Find GIFs from all over the Internet that ties in with your favorite movies to share</p1>
