local storage added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<link rel="icon" type="image/x-icon" href="./images/bobines-video-icon.png">
-<title>Movie meets Giphy!</title>
+  <link rel="icon" type="image/x-icon" href="./images/bobines-video-icon.png">
+  <title>Movie meets Giphy!</title>
 </head>
+
 <body>
-<h1 style="color:yellow;text-align: center">Find the intersection of Movies and Giphys!</h1>
-<p style="color:yellow;text-align: center;">Find GIFs from all over the Internet that ties in with your favorite movies to share</p1>
-<p style="color:yellow;text-align: center;">Look up details about your favorite movies and award winning films</p>
-</body>
-</html>
+  <h1 style="color:yellow;text-align: center">Find the intersection of Movies and Giphys!</h1>
+  <p style="color:yellow;text-align: center;">Find GIFs from all over the Internet that ties in with your favorite movies to share</p1>
+  <p style="color:yellow;text-align: center;">Look up details about your favorite movies and award winning films</p>
+
+
 
 <img src="https://media1.giphy.com/media/7zMsa4CDcXY7PEDNGN/200.gif" class="center">
 <style>
@@ -45,3 +48,6 @@
         <div style="text-align:center">
           <a href="./search.html"><button type="button">MovieMeetsGiphy</button></a>
         </div>
+
+</body>  
+</html>
